@@ -7,3 +7,17 @@
 ^\.gitignore$
 ^t/TEST$
 ^t/db/
+
+# Apache::Test generated files
+^t/conf/apache_test_config.pm$
+^t/conf/extra.conf$
+^t/conf/httpd.conf$
+^t/conf/modperl_inc.pl$
+^t/conf/modperl_startup.pl$
+^t/db/test.db$
+^t/htdocs/index.html$
+^t/logs/access_log$
+^t/logs/error_log$
+^t/logs/httpd.pid$
+^t/TEST$
+
